top distance to inner-wrap fix

--- a/assets/css/website.css
+++ b/assets/css/website.css
@@ -158,9 +158,10 @@
 	overflow: hidden;
 }
 #inner-wrap {
-	position: relative;
+	position: absolute;
 	width: 960px;
-	margin: 0 auto;
+  left:50%;
+	margin-left:-480px;
 }
 
 /*** header navigation ***/
